@@ -17,18 +17,16 @@ public class Map {
 //            createBoosters(parser.parseBoosters());
     }
 
-
-
-    boolean isInside(List<Pair<Integer, Integer>> pairs, Pair<Double, Double> p) {
+    boolean isInside(List<Point<Integer, Integer>> points, Point<Double, Double> p) {
         boolean result = false;
-        double x = p.getFirst();
-        double y = p.getSecond();
-        int j = pairs.size() - 1;
-        for(int i = 1; i < pairs.size(); i++) {
-            double xp = pairs.get(i).getFirst();
-            double yp = pairs.get(i).getSecond();
-            double xp_prev = pairs.get(j).getFirst();
-            double yp_prev = pairs.get(j).getSecond();
+        double x = p.getX();
+        double y = p.getY();
+        int j = points.size() - 1;
+        for(int i = 0; i < points.size(); i++) {
+            double xp = points.get(i).getX();
+            double yp = points.get(i).getY();
+            double xp_prev = points.get(j).getX();
+            double yp_prev = points.get(j).getY();
             if (((yp <= y && y <yp_prev) || (yp_prev <= y && y < yp))
             && (x > (xp_prev - xp) * (y - yp) / (yp_prev - yp) + xp))
             result = !result;
@@ -38,19 +36,19 @@ public class Map {
     }
 
 
-    private void createWalls(List<Pair<Integer, Integer>> coordinates){
+    private void createWalls(List<Point<Integer, Integer>> coordinates, int value){
         for (double i = 0.5; i < Y; i+=1) {
             for (double j = 0.5; j < X; j+=1) {
-                if(isInside(coordinates, new Pair<>(j, i))) map.get((int) (i - 0.5)).set((int) (j - 0.5), 0);
+                if(isInside(coordinates, new Point<>(j, i))) map.get((int) (i - 0.5)).set((int) (j - 0.5), value);
             }
         }
     }
 
-    public void createMap(List<Pair<Integer, Integer>> coordinates) {
+    public void createMap(List<Point<Integer, Integer>> coordinates) {
 
         map = new ArrayList<>();
-        Y = coordinates.get(0).getSecond();
-        X = coordinates.get(0).getFirst();
+        Y = coordinates.get(0).getY();
+        X = coordinates.get(0).getX();
         for (double i = 0; i < Y; i++) {
             ArrayList<Integer> row = new ArrayList<>(X);
             for (double j = 0; j < X; j++) {
@@ -58,12 +56,12 @@ public class Map {
             }
             map.add(row);
         }
-        createWalls(coordinates);
+        createWalls(coordinates.subList(1, coordinates.size()), 0);
     }
 
-    public void createObstacles(List<List<Pair<Integer, Integer>>> coordinates) {
-        for (List<Pair<Integer, Integer>> obstacle : coordinates) {
-            createWalls(obstacle); // тут как с картой ток наборами делаем
+    public void createObstacles(List<List<Point<Integer, Integer>>> coordinates) {
+        for (List<Point<Integer, Integer>> obstacle : coordinates) {
+            createWalls(obstacle, -1); // тут как с картой ток наборами делаем
         }
     }
 
@@ -81,29 +79,37 @@ public class Map {
             map.get(y).set(x, value);
     }
 
-    public void createBoosters(List<Pair<Character, Pair<Integer, Integer>>> coordinates) {
+    public void createBoosters(List<Point<Character, Point<Integer, Integer>>> coordinates) {
         for (int i = 0; i < coordinates.size(); i++) {
-            Pair<Character, Pair<Integer, Integer>> booster = coordinates.get(i);
-            int X = booster.getSecond().getFirst();
-            int Y = booster.getSecond().getSecond();
+            Point<Character, Point<Integer, Integer>> booster = coordinates.get(i);
+            int X = booster.getY().getX();
+            int Y = booster.getY().getY();
             int index = 10;
             //надо кучу ifов todo для индекса
             map.get(Y).set(X, index);
         }
     }
 
-    public void paint(Pair<Integer, Integer> coordinate) {
-        int value = map.get(coordinate.getSecond()).get(coordinate.getFirst());
-        value += 10;
-        map.get(coordinate.getSecond()).set(coordinate.getFirst(), value);
+    public void paint(List<Point<Integer, Integer>> listCoordinates) {
+        for (Point<Integer, Integer> point : listCoordinates) {
+            paint(point);
+        }
     }
 
-    private void checkBounding(List<Pair<Integer, Integer>> coordinates) { // это нам уже не надо (вроде)
+    public void paint(Point<Integer, Integer> coordinate) {
+        if (coordinate.getX() >= 0 && coordinate.getY() >= 0 &&coordinate.getX() < X && coordinate.getY() < Y) {
+            int value = map.get(coordinate.getY()).get(coordinate.getX());
+            value += 10;
+            map.get(coordinate.getY()).set(coordinate.getX(), value);
+        }
+    }
+
+    private void checkBounding(List<Point<Integer, Integer>> coordinates) { // это нам уже не надо (вроде)
         if (
-                !coordinates.get(0).getFirst().equals(coordinates.get(3).getFirst()) ||
-                        !coordinates.get(0).getSecond().equals(coordinates.get(1).getSecond()) ||
-                        !coordinates.get(1).getFirst().equals(coordinates.get(2).getFirst()) ||
-                        !coordinates.get(2).getSecond().equals(coordinates.get(3).getSecond())
+                !coordinates.get(0).getX().equals(coordinates.get(3).getX()) ||
+                        !coordinates.get(0).getY().equals(coordinates.get(1).getY()) ||
+                        !coordinates.get(1).getX().equals(coordinates.get(2).getX()) ||
+                        !coordinates.get(2).getY().equals(coordinates.get(3).getY())
         ) throw new IllegalArgumentException();
     }
 
@@ -114,7 +120,6 @@ public class Map {
             for(int j : row){
                 if(j == -1) System.out.print("ZZ");
                 else if(j == 0) System.out.print("__");
-                //System.out.print(j);
             }
             System.out.println();
         }
